tests/inputs/invalid/types/bad_logic/bad_or.crbc
routine main () : integer is 
    if true or true then 
        print(1);
    end

    if true or 1.2 then 
        print(1);
    end

    if false or true then 
        print(1);
    end

    if false or false then 
        print(0);
    end

    return 0;
end